# gridgulp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONSTANTS_REFACTORING.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  test-outputs.yml
docs/: AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_V2.md  AGENT_TOOL_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMPONENT_CLASSIFICATION.md  MULTI_SCALE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PRODUCT_VISION.md  PROJECT_PLAN.md  SEMANTIC_UNDERSTANDING.md  SIMPLIFICATION_RECOMMENDATIONS.md  TESTING_GUIDE.md  TESTING_WITH_SCRIPT.md  USAGE_GUIDE.md  VISION_PERFORMANCE_GUIDE.md  WEEK6_SUMMARY.md  WEEK7_SUMMARY.md  feature_collection.md  index.html  ollama-setup.md
docs/testing/: ADVANCED_VISION_TESTING_GUIDE.md  MANUAL_TESTING_GUIDE.md  WEEK2_TESTING_GUIDE.md  WEEK3_TESTING_GUIDE.md  WEEK4_TESTING_GUIDE.md  WEEK5_TESTING_GUIDE.md  WEEK6_TESTING_GUIDE.md  WEEK7_TESTING_GUIDE.md
docs_src/: index.md
docs_src/user-guide/: file-formats.md
examples/: README.md  basic_usage.py  benchmark_detection.py  capture_detection_outputs.py  debug_detection_failures.py  debug_large_file_bottleneck.py  extract_ground_truth.py  feature_collection_example.py  final_performance_test.py  final_validation_test.py  hierarchical_detection.py  new_architecture_example.py  parse_ground_truth.py  performance_demo.py  quick_performance_test.py  test_balance_sheet_fix.py  test_format_detection.py  test_large_file_performance.py  test_orchestrator_only.py  usage_examples.py  week5_complex_tables_with_features.py  week5_feature_collection_example.py  week6_excel_metadata_example.py  week6_hybrid_detection_example.py  week7_orchestrator_examples.py
examples/outputs/captures/: detection_outputs_20250728_152607.json  detection_outputs_20250728_152607.md
examples/test_files/: README.md
scripts/: bump_version.py  capture_outputs.py  extract_dataframes.py  save_extracted_csvs.py  test_all_spreadsheets.py  test_example_files.py  test_manual_files.py
scripts/manual_tests/: create_test_files.py  run_week2_tests.py  run_week3_tests.py  run_week4_tests.py  test_week5_comprehensive.py  test_week5_simple.py  vision_performance_test.py  week3_performance_demo.py
scripts/testing/: capture_detection_outputs.py  conftest_output_capture.py  output_capture.py  run_tests_with_capture.py
src/: test_week5_alignment.py
src/gridgulp/: __init__.py  config.py  detection.py  gridgulp.py
src/gridgulp/core/: constants.py
src/gridgulp/detectors/: box_table_detector.py  island_detector.py  merged_cell_analyzer.py  multi_header_detector.py  simple_case_detector.py  structured_text_detector.py
src/gridgulp/extractors/: dataframe_extractor.py
src/gridgulp/models/: detection_result.py  file_info.py  sheet_data.py  table.py
src/gridgulp/readers/: calamine_reader.py  convenience.py  csv_reader.py  excel_reader.py  factory.py  reader_adapter.py  text_reader.py
src/gridgulp/utils/: file_magic.py  logging_context.py
src/gridporter/: __init__.py  config.py  detection.py  gridporter.py
src/gridporter/agents/: __init__.py  analysis_agent.py  base_agent.py  complex_table_agent.py  detection_agent.py  extraction_agent.py  pipeline_orchestrator.py  vision_agent.py  vision_orchestrator_agent.py
src/gridporter/core/: __init__.py  configurable_constants.py  constants.py  exceptions.py  types.py
src/gridporter/detectors/: __init__.py  excel_metadata_extractor.py  format_analyzer.py  island_detector.py  merged_cell_analyzer.py  multi_header_detector.py  simple_case_detector.py
src/gridporter/models/: __init__.py  detection_result.py  file_data.py  file_info.py  multi_scale.py  sheet_data.py  table.py  vision_result.py
src/gridporter/prompts/: __init__.py
src/gridporter/readers/: __init__.py  base_reader.py  calamine_reader.py  csv_reader.py  excel_reader.py  factory.py  reader_adapter.py
src/gridporter/telemetry/: __init__.py  feature_collector.py  feature_models.py  feature_store.py  llm_tracker.py  metrics.py
src/gridporter/tools/: __init__.py
src/gridporter/utils/: __init__.py  cost_optimizer.py  excel_utils.py  file_magic.py  logging_context.py  openai_pricing.py  visualization.py
src/gridporter/vision/: __init__.py  bitmap_analyzer.py  bitmap_generator.py  data_region_preprocessor.py  hierarchical_detector.py  integrated_pipeline.py  pattern_detector.py  pipeline.py  progressive_refiner.py  quadtree.py  region_proposer.py  region_verifier.py  vision_models.py  vision_request_builder.py
tests/: __init__.py  conftest.py  conftest_output_capture.py  test_complex_detection.py  test_config.py  test_detection_agent.py  test_feature_store.py  test_gridgulp.py  test_simple_detector.py  test_vision.py  test_vision_orchestrator_example.py  test_week5_comprehensive.py  test_week5_simple.py
tests/agents/: __init__.py  test_vision_orchestrator_agent.py
tests/detectors/: test_excel_metadata_extractor.py  test_format_analyzer.py  test_island_detector.py  test_merged_cell_analyzer.py  test_multi_header_detector.py
tests/extractors/: test_dataframe_extractor.py
tests/integration/: test_complex_tables.py  test_end_to_end.py  test_multi_scale_pipeline.py  test_week5_complex_tables.py
tests/manual/level0/: README.md
tests/models/: test_extraction_result.py
tests/outputs/captures/: detection_outputs_20250728_151623.json  detection_outputs_20250728_151623.md  detection_outputs_20250728_162534.json  (+4 more)
tests/unit/: test_bitmap_generator_compression.py  test_data_region_preprocessor.py  test_file_detection.py  test_multi_scale_models.py  test_progressive_refiner.py  test_readers.py  test_region_verifier.py  test_vision_models.py  test_vision_pipeline.py  test_vision_request_builder.py
tests/utils/: __init__.py  output_capture.py
tests/vision/: test_hierarchical_detector.py
(+29 files in other folders)
