[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridporter"
version = "0.3.0"
description = "Simplified intelligent spreadsheet ingestion framework with automatic table detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GridPorter Contributors"},
]
keywords = ["excel", "csv", "table-detection", "data-extraction", "spreadsheet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "olefile>=0.46", # For password-protected Excel detection
    "pandas>=2.0.0",
    "numpy>=2.3.0",
    "scipy>=1.11.0",
    "python-magic>=0.4.27",
    "filetype>=1.2.0", # Fallback for file type detection
    "magika>=0.6.1", # AI-powered file type detection
    "chardet>=5.0.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0", # For nice CLI output
    "click>=8.1.0", # For CLI
    "python-calamine>=0.2.0", # Fast Excel/ODS reader (Rust-based)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.8.0",
    "black>=23.0.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pre-commit>=3.3.0",
    "ipykernel>=6.25.0",  # For Jupyter examples
    "psutil>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/Ganymede-Bio/gridporter"
Repository = "https://github.com/Ganymede-Bio/gridporter"
Issues = "https://github.com/Ganymede-Bio/gridporter/issues"

[project.scripts]
gridporter = "gridporter.cli:main"

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",   # Unused function arguments (common in test fixtures)
    "D",     # Missing docstrings (not needed in tests)
    "S101",  # Use of assert (expected in tests)
    "SIM",   # Some simplifications don't apply well to test code
    "F401",  # Unused imports (may be used for fixtures)
    "F811",  # Redefinition of unused names (common with fixtures)
    "I",     # Import sorting (less strict in tests)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "tests/",
    "examples/",
]

[[tool.mypy.overrides]]
module = [
    "xlrd.*",
    "sklearn.*",
    "skimage.*",
    "magic.*",
    "PIL.*",
    "httpx.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=gridporter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/gridporter"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
